--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "apie",
+  "name": "react-redux-quest",
   "version": "0.0.0",
   "description": "API and generic utilities for react and redux eco-system",
   "main": "cjs/index.js",
-  "browser": "dist/apie.js",
+  "browser": "dist/react-redux-quest.js",
   "module": "es/index.js",
   "jsxnext:main": "es/index.js",
-  
   "files": [
     "dist",
     "cjs",
@@ -20,25 +19,16 @@
     "prepublish": "npm run build",
     "precommit": "npm run lint:test",
     "prepush": "npm run lint:test",
-
     "release": "release-it",
-
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-
     "lint": "npm run lint:eslint",
     "lint:eslint": "eslint src/*.js",
-    
-
     "test": "clear && jest",
     "test:coverage": "jest --coverage ",
     "test:watch": "clear && jest --watch",
-
     "lint:test": "npm run lint && npm run test:coverage",
-    
-    
     "build": "clear && npm run lint:test && npm run build:cjs && npm run build:es && npm run build:umd ",
     "build:watch": "clear && rimraf cjs && cross-env BABEL_ENV=cjs babel -w src --out-dir cjs ",
-
     "build:es": "rimraf es && cross-env BABEL_ENV=es babel src --out-dir es",
     "build:cjs": "rimraf cjs && cross-env BABEL_ENV=cjs babel src --out-dir cjs",
     "build:umd": "rimraf dist && cross-env BABEL_ENV=es rollup -c & cross-env BABEL_ENV=es NODE_ENV=production rollup -c"
@@ -48,29 +38,28 @@
   "license": "MIT",
   "repository": "p10ns11y/apie",
   "devDependencies": {
-    
-
     "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    
-    "babel-preset-es2015": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "change-case": "^3.0.1",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
     "eslint": "^3.12.0",
     "eslint-config-standard-extended": "^1.0.1",
     "eslint-plugin-babel": "^4.0.0",
-    
-    "jest": "^18.1.0",
-    
-    "rimraf": "^2.5.4",
-    "release-it": "^2.5.1",
     "husky": "^0.12.0",
+    "jest": "^18.1.0",
+    "release-it": "^2.5.1",
+    "rimraf": "^2.5.4",
     "rollup": "^0.39.2",
     "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-bundle-size": "^1.0.1",
     "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1"
   }
 }
