--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.17.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -59,7 +60,14 @@
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-bundle-size": "^1.0.1",
     "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1"
+  },
+  "dependencies": {
+    "invariant": "2.2.4",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash.isplainobject": "^4.0.6",
+    "warning": "^3.0.0"
   }
 }
