--- a/.babelrc
+++ b/.babelrc
@@ -34,6 +34,11 @@
         ["transform-class-properties", { "loose": true }],
         "transform-object-rest-spread"
       ]
+    },
+    "rollup": {
+      "plugins": [
+        "external-helpers"
+      ]
     }
   }
 }
