--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:cjs": "rimraf cjs && cross-env BABEL_ENV=cjs babel src --out-dir cjs",
     "build:umd": "rimraf dist && cross-env BABEL_ENV=es rollup -c & cross-env BABEL_ENV=es NODE_ENV=production rollup -c"
   },
-  "keywords": [],
+  "keywords": ["react", "redux", "api"],
   "author": "Peramanathan Sathyamoorthy (sathyam.peram@gmail.com)",
   "license": "MIT",
   "repository": "p10ns11y/react-redux-quest",
